--- a/foam/index.html
+++ b/foam/index.html
@@ -74,11 +74,11 @@
 
       <div class="description-section">
         <p>
-          <em>Foam</em> is three friends from the emo and pop-punk scene who reunited to make loud, full shoegaze with a '90s/2000s twist.
+          <em>Foam</em> is three friends from the emo and pop-punk scene who reunited after years apart to make loud, full shoegaze with a '90s/2000s twist. Drawing from early-2000s emo and '90s grunge, the band channels familiar influences into something heavy, melodic, and their own.
           <br><br>
-          Their debut single, <em>"Bind,"</em> explores what holds you down and what it feels like to break free, setting the tone for their first EP recorded with Mystery Class Records.
+          Their debut single, "<em>Bind,</em>" explores the feeling of being trapped and the release that comes with breaking free, setting the tone for their first EP recorded in-house with Mystery Class Records. While <em>Foam</em> is a three-piece, their sound is anything but small, shaped by shared history, instinct, and giving each member space to shine.
           <br><br>
-          They play local shows, write music they're proud of, and are steadily carving out their place in the Oklahoma City scene.
+          With over a decade of collective experience in the Oklahoma music scene, <em>Foam</em> continues to play local shows, write music they're proud of, and steadily carve out their place in Oklahoma City.
         </p>
       </div>
     </main>
