--- a/donovan-funk/index.html
+++ b/donovan-funk/index.html
@@ -76,11 +76,11 @@
 
       <div class="description-section">
         <p>
-          <em>Donovan Funk</em> began as a solo project built from guitar pedals, classic rock records, and a habit of turning feelings into loud sounds. Raised on his dad's music, Donovan learned guitar early and later found his footing on bass in fourth-grade orchestra, making songwriting feel natural long before it felt intentional.
+          <em>Donovan Funk</em> began as a solo project built from guitar pedals, classic rock records, and a habit of turning feelings into loud sounds. Raised on his dad's music, Donovan learned guitar early and later found his footing on bass in fourth-grade orchestra, making songwriting feel natural long before it felt intentional. By 2019, he began writing his own material, releasing his first song in 2020 while the world was shut down.
           <br><br>
-          He released his first song while the world was shut down, and by the time the scene returned, he was already playing originals around Oklahoma City.
+          As the scene reopened, Donovan was already playing originals around Oklahoma City, eventually booking and managing his own DIY tours across the Midwest and beyond. His sound lives broadly in alternative rock, drawing heavily from shoegaze and slow, emotional textures shaped by bands that value atmosphere as much as weight. What started alone has since grown into a full band made up of close friends, expanding the project into something more collaborative both onstage and in the studio.
           <br><br>
-          Since then, he's brought in his closest friends to form a full band, transforming a solo project into an artist to remember.
+          With new releases marking the closing chapter of the Donovan Funk name, the project stands as a deeply personal body of work—built quietly, independently, and with the people he trusts most.
         </p>
       </div>
     </main>
