--- a/idiot-mile/index.html
+++ b/idiot-mile/index.html
@@ -77,13 +77,13 @@
 
       <div class="description-section">
         <p>
-          <em>Idiot Mile</em> began as <em>Pillow Head</em>, formed by <em>Ethan</em>, <em>Zach</em>, and <em>Henry</em>, before Henry stepped away and <em>Austin</em> joined, shaping the lineup into what it is today.
-          Built on loud guitars, the band blends slowcore and shoegaze with a strain of '90s nostalgia that still feels firmly rooted in the present.
-          Songs like <em>"Call Me,"</em> written by Austin before even joining the band, became some of their earliest releases and helped define the band's sound early on.
+          <em>Idiot Mile</em> began as <em>Pillow Head</em>, formed by <em>Ethan Dillard</em> (guitar, vocals), <em>Zachary Roberts</em> (drums), and <em>Henry Shields</em> (bass). As the project developed, <em>Austin Hazelton</em> (guitar, vocals) joined, helping shape much of the band's early direction. Not long after, <em>Shields</em> stepped away, and the band transitioned into a new chapter under the name <em>Idiot Mile</em>.
           <br><br>
-          They’ve played local venues and DIY shows, released music through Mystery Class Records, and had their work featured on <em>KATT 100.5 FM</em>.
+          In the early stretch of <em>Idiot Mile</em>, <em>Taylor Haynes</em> (bass) filled in during a transitional period before <em>Riley Smith</em> (bass) joined, solidifying the current lineup. With the band fully in place, <em>Idiot Mile</em> leaned into a sound built on loud guitars, blending slowcore and shoegaze with a strain of '90s nostalgia that still feels rooted in the present.
           <br><br>
-          <em>Idiot Mile</em> is currently focused on finishing their debut album and taking the band on the road.
+          Songs like "<em>Call Me</em>," written by <em>Hazelton</em> years before he officially joined the band, became some of <em>Idiot Mile's</em> earliest releases and helped define their sound early on. Since then, the band has played local venues and DIY shows, released music through <em>Mystery Class Records</em>, and had their work featured on <em>KATT 100.5 FM</em>.
+          <br><br>
+          <em>Idiot Mile</em> is currently finishing their debut album and preparing to take the band on the road.
         </p>
       </div>
     </main>
