fixed bio errors

--- a/feverest/index.html
+++ b/feverest/index.html
@@ -81,7 +81,7 @@
           <br><br>
           They released their debut EP, <em>Blurred</em>, in 2024, quickly building momentum through sold-out shows, festival appearances like Pug Fest, and shared stages with bands such as <em>Glixen</em>, <em>Glare</em>, <em>Keep</em>, and <em>Leaving Time</em>. Known for layered guitars, explosive dynamic shifts, and a visceral live presence, Feverest has established itself as one of Tulsa's most compelling new heavy-leaning projects.
           <br><br>
-          Looking ahead, the band is focused on releasing new material through Mystery Class Records, taking their sound on the road, and continuing to evolve while staying true to the emotional core that brought them together.
+          Looking ahead, the band is focused on releasing new material through <em>Mystery Class Records</em>, taking their sound on the road, and continuing to evolve while staying true to the emotional core that brought them together.
         </p>
       </div>
     </main>
